@@ -232,22 +232,6 @@ gems:
     assert_equal 'EOFError: EOFError reading uri', e.message
   end
 
-  def test_fetch_path_open_uri_http_error
-    fetcher = Gem::RemoteFetcher.new nil
-
-    def fetcher.open_uri_or_path(uri)
-      io = StringIO.new 'went boom'
-      err = OpenURI::HTTPError.new 'error', io
-      raise err
-    end
-
-    e = assert_raise Gem::RemoteFetcher::FetchError do
-      fetcher.fetch_path 'uri'
-    end
-
-    assert_equal "OpenURI::HTTPError: error reading uri\n\twent boom", e.message
-  end
-
   def test_fetch_path_socket_error
     fetcher = Gem::RemoteFetcher.new nil
 
@@ -342,7 +326,8 @@ gems:
       end
     end
 
-    fetcher.instance_variable_set :@connection, conn
+    conn = { 'gems.example.com:80' => conn }
+    fetcher.instance_variable_set :@connections, conn
 
     fetcher.send :open_uri_or_path, 'http://gems.example.com/redirect' do |io|
       assert_equal 'real_path', io.read
@@ -360,7 +345,8 @@ gems:
       res
     end
 
-    fetcher.instance_variable_set :@connection, conn
+    conn = { 'gems.example.com:80' => conn }
+    fetcher.instance_variable_set :@connections, conn
 
     e = assert_raise Gem::RemoteFetcher::FetchError do
       fetcher.send :open_uri_or_path, 'http://gems.example.com/redirect'
